--- a/mybonds/templates/beacon/fulltextnew.html
+++ b/mybonds/templates/beacon/fulltextnew.html
@@ -94,6 +94,7 @@
     {% for ftx in ftxlist %}
     <p class="lead" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ftx}}  
     {% endfor %}
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ url }}" title="灯塔阅读"><h4 style="color:white;margin-bottem: 23px;font-size: 15px;">查看原文</h4> </a> </p>
   </div> <!-- fulltext -->
   </div> <!-- /row-fluid -->
 
