--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -193,11 +193,10 @@
       alert("灯塔名称不能为空"); 
       return ;
     } 
-    if($("#isheadline").is(':checked')){
+    if($("#headlineonly").is(':checked')){
         headlineonly= "1"; 
-    }
-
-    // alert('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beaconusr='+beacon_usr);
+    } 
+    // alert('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beacontime='+beacon_time+'&beaconusr='+beacon_usr+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='+beacon_displayname+'&beacontag='+beacontag);
     window.location.href = encodeURI('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beacontime='+beacon_time+'&beaconusr='+beacon_usr+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='+beacon_displayname+'&beacontag='+beacontag);
     // $('#beacon_id').val("");
     // $('#beacon_name').val("");
