add label in page

--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -37,7 +37,7 @@
             <div class="span12 doc-container" style="margin-left:0px;">
             <blockquote>
              <p><h5>
-             <a target="_blank" href="{{doc.url}}">{{doc.title}}&nbsp;&nbsp;</a></h5></p>  
+             <a target="_blank" href="{{doc.url}}">{{doc.title}}&nbsp;&nbsp;</a></h5></p>{{doc.label}}
              <p ><small>{{doc.domain}}&nbsp;  {{doc.create_time}}&nbsp; <span style="color:green"> {{doc.beaconttl}}&nbsp;  </span> 
              </small></p> 
               {{doc.text}} 
