--- a/mybonds/templates/beacon/beacon_news.html
+++ b/mybonds/templates/beacon/beacon_news.html
@@ -16,11 +16,13 @@
           </div>
           <div class="span8">
             <ul class="nav"> 
-              <li><a class="brand" href="/news/"><img class="img-rounded" src="/site_media/static/news/logo1x.png" alt="指极星"></a></li>
-              <li><a href="/news/beaconnews" title="灯塔阅读"><h5 style="color:white;margin-top: 3px;font-size: 13px;">灯塔阅读</h5></a></li> 
-              <!--li><a href="/news/?o=ppl" title="今日热点"><h5 style="margin-top: 3px;font-size: 13px;">今日热点</h5></a></li> 
-              <li><a href="/news/?o=rdd" title="我的足迹"><h5 style="margin-top: 3px;font-size: 13px;">我的足迹</h5></a></li--> 
-            
+              <li><a class="brand" href="/news/hotboard/"><img class="img-rounded" src="/site_media/static/news/logo1x.png" alt="指极星"></a></li>
+              <li><a href="/news/hotboard/" title="热点面板"><h5 style="color:white;margin-top: 3px;font-size: 13px;">热点面板</h5></a></li> 
+              <li><a href="/news/beaconnews/" title="灯塔阅读"><h5 style="color:white;margin-top: 3px;font-size: 13px;">灯塔阅读</h5></a></li> 
+              <li><a href="#" title="频道关联"><h5 style="color:white;margin-top: 3px;font-size: 13px;">频道关联</h5></a></li> 
+              <li><a href="#" title="populary"><h5 style="color:white;margin-top: 3px;font-size: 13px;">populary</h5></a></li> 
+              <li><a href="#" title="channelnews"><h5 style="color:white;margin-top: 3px;font-size: 13px;">channelnews</h5></a></li> 
+              <!--li><a href="/news/?o=rdd" title="我的足迹"><h5 style="margin-top: 3px;font-size: 13px;">我的足迹</h5></a></li--> 
             </ul>
             <p class="navbar-text pull-right">{% if isadmin == "1" %}<a href="/news/adm">控制面板</a>&nbsp;&nbsp;{% endif %}
             <a href="/usermodify/">{{user.username}}</a>&nbsp;&nbsp;
