modified eventid to beaconid in hotboard api

--- a/mybonds/templates/beacon/hotboard.html
+++ b/mybonds/templates/beacon/hotboard.html
@@ -79,7 +79,7 @@
               </a>
               {% endif %}
               {% endif %}</p>
-             <p ><small>{{doc.domain}}&nbsp;  {{doc.create_time}}&nbsp;{"docid":{{doc.docid}},&nbsp;"eventid":{{doc.eventid}} } <span style="color:green"> {{doc.beaconttl}}&nbsp;  </span> 
+             <p ><small>{{doc.domain}}&nbsp;  {{doc.create_time}}&nbsp;{"docid":{{doc.docid}},&nbsp;"beaconid":{{doc.beaconid}} } <span style="color:green"> {{doc.beaconttl}}&nbsp;  </span> 
              </small></p> 
               {{doc.text}}
                <!--br><br>{{doc.tx}} <br-->
