--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -19,6 +19,8 @@
           <div id="beacon-container"  class="beacon-container span2" style="border-style: dotted;border-width:1px;border-color:#CBDEF1;">
 
             {% for beacon in beacons %}
+
+              {% if beaconid == beacon.id %} 
               <div class="tag-item span12"  style="margin-left:0px;">
                 <span id='{{beacon.id}}' name='{{beacon.crt_usr}}' class="label label-info">{{beacon.name}}
                 <!--span class="badge ">{{beacon.cnt}}</span-->
@@ -26,7 +28,10 @@
                 <!--a class='close' data-dismiss='tag-item' style="float: none;">×</a-->
                 <a class="close" data-toggle="modal" href="#myModal"  style="float: none;" data-keyboard="true" data-backdrop="true" >×</a>
               </div>  
+            {% endif %}
+              
             {% endfor %}
+
           </div>
 
           <div class="span7"><!-- 中间灯塔similar文档 --> 
